objects/Account_Service_Data__c.object
<CustomObject>
    <fields>
        <fullName>ACCCOUNT_PROSPECT_ID__c</fullName>
        <label>ACCCOUNT_PROSPECT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_NAME__c</fullName>
        <label>ACCOUNT_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_LINE1__c</fullName>
        <label>ADDRESS_LINE1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDRESS_LINE2__c</fullName>
        <label>ADDRESS_LINE2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSMSTROPCODE__c</fullName>
        <label>AOPSMSTROPCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSMSTRROWID__c</fullName>
        <label>AOPSMSTRROWID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSMSTRSOURCE__c</fullName>
        <label>AOPSMSTRSOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSMSTRTBLNM__c</fullName>
        <label>AOPSMSTRTBLNM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSMSTRTIMEST__c</fullName>
        <description>AOPS DateTime Field. Used for ordering in query.</description>
        <externalId>true</externalId>
        <label>AOPSMSTRTIMEST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPSTBLID__c</fullName>
        <label>AOPSTBLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_ADDR_SEQ_NUM__c</fullName>
        <externalId>true</externalId>
        <label>AOPS_ADDR_SEQ_NUM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_CUSTOMER_ID__c</fullName>
        <label>AOPS_CUSTOMER_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUSINESS_NAME__c</fullName>
        <label>BUSINESS_NAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTRACT_RETAIL_CUST_CODE__c</fullName>
        <label>CONTRACT_RETAIL_CUST_CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <label>COUNTRY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTY__c</fullName>
        <label>COUNTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATE_UPDATE_FLAG__c</fullName>
        <label>CREATE_UPDATE_FLAG</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_DELETE_FLAG__c</fullName>
        <label>CUSTOMER_DELETE_FLAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_TYPE__c</fullName>
        <label>CUSTOMER_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEFAULT_FLAG__c</fullName>
        <label>DEFAULT_FLAG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_ID__c</fullName>
        <label>EMP_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERROR_Message__c</fullName>
        <label>ERROR Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FREIGHT_CHARGE_REQUIRED__c</fullName>
        <label>FREIGHT_CHARGE_REQUIRED</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOSTED_CATALOG_FLAG__c</fullName>
        <label>HOSTED_CATALOG_FLAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCATION_KEY__c</fullName>
        <label>LOCATION_KEY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Flag__c</fullName>
        <label>Legal_Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORACLE_ADDR_SEQ_NUM__c</fullName>
        <label>ORACLE_ADDR_SEQ_NUM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORACLE_CUSTOMER_ID__c</fullName>
        <label>ORACLE_CUSTOMER_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_MAX_AMOUNT__c</fullName>
        <label>ORDER_MAX_AMOUNT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_CUSTOMER_ID__c</fullName>
        <label>PARENT_CUSTOMER_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_EMP_ID__c</fullName>
        <label>REP EMP_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP__c</fullName>
        <label>REP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSV1_CHAR2__c</fullName>
        <label>RSV1_CHAR2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSV2_CHAR2__c</fullName>
        <label>RSV2_CHAR2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECTOR__c</fullName>
        <label>SECTOR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEGMENTATION__c</fullName>
        <label>SEGMENTATION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ADDR_SEQ_NUM__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_ADDR_SEQ_NUM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_CUSTOMER_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_CUSTOMER_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_REP__c</fullName>
        <label>SITE REP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC_Indicator__c</fullName>
        <label>SPC Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <formula>IF(ISPICKVAL(Account_Type__c, &apos;Customer&apos;), AOPS_CUSTOMER_ID__c, AOPS_ADDR_SEQ_NUM__c)</formula>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VERSION__c</fullName>
        <label>VERSION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE__c</fullName>
        <label>ZIP_CODE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updatedatetime_in_number__c</fullName>
        <formula>value(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(mid(AOPSMSTRTIMEST__c,0,(len(AOPSMSTRTIMEST__c)-6  )),&apos;-&apos;, &quot;&quot;),&apos;:&apos;,&quot;&quot; ),&apos;T&apos;,&apos;0&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>updatedatetime in number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Account Service Data</label>
    <nameField>
        <label>Account Service Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Service Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>